Fix: Change to Node.js web service deployment
- Removed static export config (incompatible with dynamic routes)
- Updated render.yaml for Node.js runtime
- Keep SSR for dynamic project pages

--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,12 @@
 services:
   - type: web
     name: joey-ai-frontend-v2
-    env: static
+    runtime: node
+    plan: free
     buildCommand: npm install && npm run build
-    staticPublishPath: .next
+    startCommand: npm start
     envVars:
       - key: NEXT_PUBLIC_API_URL
         value: http://localhost:8000
+      - key: NODE_ENV
+        value: production
